--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         url: https://a20c657b8f42246639f6b06fff6ee64e-ebe8f97aeec0dd3f.elb.us-west-1.amazonaws.com/api/general/refresh_tag_category/
         method: POST
         customHeaders: '{"Content-Type": "application/x-www-form-urlencoded"}'
-        data: '{"email": "${{ secrets.SOLODIT_USER }}", "password": "${{ secrets.SOLODIT_PASSWORD }}"}'
+        data: '{"email": "wang@cyfrin.io", "password": "admin123"}'
     - name: Show Response of Refreshing Tags and Categories
       run: |
         echo ${{ secrets.SOLODIT_USER }}
